fix: save footer for admin only shows on mobile

--- a/src/components/admin/styles/SaveFooterAdmin.module.css
+++ b/src/components/admin/styles/SaveFooterAdmin.module.css
@@ -1,5 +1,4 @@
 .container {
-
     max-width: 100vw;
     background-color: var(--color-white);
     border: 1px solid var(--color-border);
@@ -12,4 +11,10 @@
     padding: 1.5rem 1rem;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
+}
+
+@media (min-width: 768px) {
+    .container {
+        display: none;
+    }
 }
